Don't use the blendicon for krita or openraster files

BUG:290875